--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林), server: 213.183.53.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林), server: 213.183.53.221, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林), server: 213.183.53.207, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇳🇱 荷兰-1.86MB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林), server: 213.183.53.221, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林), server: 213.183.53.207, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-351.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇳🇱 荷兰-392.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇳🇱 荷兰-321.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-259.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
