--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,58 +5,73 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林), server: 213.183.53.179, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: jp2.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp2.trojan.tel, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-422.7KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +87,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-422.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
