--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: jp2.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp2.trojan.tel, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-215.5KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇮🇳 印度-1.21MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
   - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.48MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.67MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-215.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
