--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-1.21MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.67MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.48MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.67MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-586.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇺🇸 美国-988.2KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.91MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-724.9KB/s(Youtube:不良林), server: 52.196.186.234, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
+      - 波兰-586.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
