--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.67MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 波兰-586.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇺🇸 美国-988.2KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.91MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-724.9KB/s(Youtube:不良林), server: 52.196.186.234, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇯🇵 日本-14.46MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.64MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-19.12MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-496.3KB/s(Youtube:不良林), server: hn2.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hn2.aqvpn.me, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-389.6KB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
+  - {name: 🇬🇧 英国-3.02MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.92MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 波兰-586.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-724.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-496.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
